# widgets

./: .gitignore  DEVELOPING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: coverage.yaml  lint.yaml  package.yaml
src/widgets/base/: exceptions.py  helpers.py  io.py  replicator.py  resource.py  resource_list.py  subresource.py  widget.py
src/widgets/cli/: __init__.py  io.py  main.py
src/widgets/st_base/: resource.py  value.py
src/widgets/streamlit/: __init__.py  resource_list.py  widget.py
src/widgets/streamlit/multi_resources/: base.py  expander.py
src/widgets/streamlit/resource/: __init__.py  base.py  columns.py  dataframe.py  duplicator.py  expander.py  markdown.py  selector.py  value.py
src/widgets/streamlit/resource/files/: base.py  dataframe.py  download_dataframe.py
src/widgets/streamlit/resource/values/: base.py  checkbox.py  float.py  integer.py  multiselect.py  selectstring.py  slider.py  string.py  textarea.py
src/widgets/streamlit/resource_list/: __init__.py  base.py  expander.py  replicator.py
src/widgets/streamlit/resources/: base.py  dataframe.py  value.py
src/widgets/streamlit/widget/: __init__.py  base.py
src/widgets/templates/: source.py.j2  streamlit_single.html  streamlit_single.html.j2  streamlit_single.py.j2  streamlit_single_ga.html.j2
tests/: debug_source_all.py  test_base.py  test_cli.py  test_duplicator.py  test_helpers.py  test_io.py  test_source_parents.py  test_streamlit.py  test_subresource.py
tests/assets/: app.py
tests/st_simple_widget/: app.py  df1.csv  df2.csv
